--- a/app/src/main/res/values-am-rET/strings.xml
+++ b/app/src/main/res/values-am-rET/strings.xml
@@ -1,20 +1,22 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Bale Gariw</string>
+
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
-    <string name="map">Map</string>
+    <string name="title_notifications">ማሳወቂያ</string>
+    <string name="map">ካርታ</string>
     <string name="messages">Messages</string>
-    <string name="routes">Routes</string>
-    <string name="blue_loop">Blue Loop</string>
-    <string name="green_loop">Green Loop</string>
+    <string name="routes">መስመሮች</string>
+    <string name="blue_loop">ሰማያዊ ዙር</string>
+    <string name="green_loop">አረንጓዴ ዙር</string>
     <string name="title_activity_main2">Main2Activity</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">ቅንጅቶች</string>
     <string name="title_activity_nav_drawer">NavDrawer</string>
     <string name="todo">TODO</string>
 
@@ -23,6 +25,4 @@
     <string name="english">English</string>
     <string name="amharic">Amharic</string>
     <string name="afan_oromo">Afan Oromo</string>
-
-
 </resources>
