--- a/app/src/main/res/values-om-rET/strings.xml
+++ b/app/src/main/res/values-om-rET/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Bale Gariw</string>
     <string name="title_home">Home</string>
@@ -23,6 +24,4 @@
     <string name="english">English</string>
     <string name="amharic">Amharic</string>
     <string name="afan_oromo">Afan Oromo</string>
-
-
 </resources>
