ui and messages section

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,11 @@
 <resources>
-    <string name="app_name">Bale Gariw</string>
+    <string name="app_name">BUS Demo</string>
+    <string name="drawer_open">Drawer Open</string>
+    <string name="drawer_close">Drawer Close</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
-    <string name="map">Map</string>
-    <string name="messages">Messages</string>
-    <string name="routes">Routes</string>
-    <string name="blue_loop">Blue Loop</string>
-    <string name="green_loop">Green Loop</string>
+    <string name="Home">home</string>
     <string name="title_activity_main2">Main2Activity</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -15,14 +13,34 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_nav_drawer">NavDrawer</string>
-    <string name="todo">TODO</string>
+
+
+    <string name="settings">Settings</string>
+    <string name="about">About</string>
+    <string name="user_name">User Name</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="english">English</string>
-    <string name="amharic">Amharic</string>
-    <string name="afan_oromo">Afan Oromo</string>
+    <string name="maps">Maps</string>
+    <string name="routes">Routes</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="title_activity_settings">Settings</string>
 
+    <!-- Preference Titles -->
+    <string name="messages_header">Messages</string>
+    <string name="sync_header">Sync</string>
 
+    <!-- Messages Preferences -->
+    <string name="signature_title">Your signature</string>
+    <string name="reply_title">Default reply action</string>
+
+    <!-- Sync Preferences -->
+    <string name="sync_title">Sync email periodically</string>
+    <string name="attachment_title">Download incoming attachments</string>
+    <string name="attachment_summary_on">Automatically download attachments for incoming emails
+    </string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <string name="map">Map</string>
+    <string name="route">Route</string>
+    <string name="messages">Messages</string>
 </resources>
